# TAU-Inpainter

./: README.md  pyproject.toml
tau_inpainter/algorithms/: total_curvature.py
tests/: test_total_curvature_inpainter.py
